--- a/index.html
+++ b/index.html
@@ -62,18 +62,18 @@
                 <div class="row">
                   <div class="col">
                     <img
-                      src="./assets/images/headshot-small.jpg"
+                      src="./assets/images/headshot-small2.jpg"
                       alt="Place Holder Image"
                       class="img img-responsive rounded float-left mr-3"
                       id="headshot"
                       height="225px"
-                      width="150px"
+                      width="auto"
                     />
                     <p>
                       I am a fullstack web developer
                      located in Columbus, OH. I am seeking contract
-                      work, as well as permanent positions. In addition to web
-                      development work, I graduate cum laude with a degree in Chemical Engineering
+                      work, as well as permanent positions. In addition to my experience with web
+                      development work, I graduated cum laude with a degree in Chemical Engineering
                       from The Ohio State University.
                     </p>
                   </div>
