--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               <div class="card-body">
                 <div class="row">
                   <div class="col">
-                    <h1>About Me</h1>
+                    <h1>Simon Ziccardi</h1>
                   </div>
                 </div>
                 <div class="row">
