Changes to format.

--- a/index.html
+++ b/index.html
@@ -71,10 +71,15 @@
                     />
                     <p>
                       I am a fullstack web developer
-                     located in Columbus, OH. I am seeking contract
-                      work, as well as permanent positions. In addition to my experience with web
-                      development work, I graduated cum laude with a degree in Chemical Engineering
-                      from The Ohio State University.
+                     located in Columbus, OH. I am seeking a permanent position or contract
+                      work.</p>
+                      <p>
+                      In addition to my experience as a web
+                      developer, I am a graduate of The Ohio State University with a degree in Chemical Engineering.
+                    </p>
+                    <p>
+                      The Ohio State University 
+                      Bachelor of Science, cum laude 3.678
                     </p>
                   </div>
                 </div>
