--- a/index.html
+++ b/index.html
@@ -70,16 +70,16 @@
                       width="auto"
                     />
                     <p>
-                      I am a fullstack web developer
+                      I am a full-stack web developer
                      located in Columbus, OH. I am seeking a permanent position or contract
                       work.</p>
                       <p>
                       In addition to my experience as a web
-                      developer, I am a graduate of The Ohio State University with a degree in Chemical Engineering.
+                      developer, I am a graduate of Ohio State University with a degree in Chemical Engineering.
                     </p>
                     <p>
                       The Ohio State University 
-                      Bachelor of Science, cum laude 3.678
+                      B.S., cum laude GPA 3.678
                     </p>
                   </div>
                 </div>
