portfolio images now lead to applications.

--- a/portfolio.html
+++ b/portfolio.html
@@ -65,7 +65,9 @@
                     <div class="card mb-8">
                       <div class="row no-gutters">
                         <div class="col-md-4">
+                          <a href="https://sziccardi1998.github.io/COVIDTracker/">
                           <img src="./assets/images/COVIDTracker.JPG" class="card-img" alt="COVID Tracker Thumbnail" style="height:100%;">
+                          </a>
                         </div>
                         <div class="col-md-8">
                           <div class="card-body content">
@@ -84,7 +86,9 @@
                     <div class="card mb-8">
                       <div class="row no-gutters">
                         <div class="col-md-4">
+                          <a href="https://sziccardi1998.github.io/DayPlanner/">
                           <img src="./assets/images/DayPlanner.JPG" class="card-img" alt="COVID Tracker Thumbnail" style="height:100%;">
+                          </a>
                         </div>
                         <div class="col-md-8">
                           <div class="card-body content">
@@ -103,7 +107,9 @@
                     <div class="card mb-8">
                       <div class="row no-gutters">
                         <div class="col-md-4">
+                          <a href="https://sziccardi1998.github.io/PasswordGenerator/">
                           <img src="./assets/images/PasswordGenerator.JPG" class="card-img" alt="COVID Tracker Thumbnail" style="height:100%">
+                          </a>
                         </div>
                         <div class="col-md-8">
                           <div class="card-body content">
@@ -122,7 +128,9 @@
                     <div class="card mb-8">
                       <div class="row no-gutters">
                         <div class="col-md-4">
+                          <a href="https://sziccardi1998.github.io/WeatherDashboard/">
                           <img src="./assets/images/WeatherDashboard.JPG" class="card-img" alt="COVID Tracker Thumbnail" style="height:100%;">
+                          </a>
                         </div>
                         <div class="col-md-8">
                           <div class="card-body content">
